adding tugas 1 dan tugas 2

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -33,6 +33,11 @@
   font-weight: 500 !important;
 }
 
+.linkTugas {
+  color: black;
+  text-decoration: none;
+}
+
 .authentication {
   display: flex;
   width: 100%;
